--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -31,6 +31,7 @@ dependencies:
   
   # State Management
   provider: ^6.1.1
+  change_app_package_name: ^1.5.0
 
 dev_dependencies:
   flutter_test:
